@@ -7,7 +7,6 @@ Open Issues/To-Do Items
       - make indirection convenient (e.g. bind to looking up something from
         another binding)
 
-
     * peak.binding
 
        - Cleanup/document attribute binding interface
@@ -16,12 +15,6 @@ Open Issues/To-Do Items
 
        - binding.AttribDef has an adequate docstring
 
-       - Review all current usage of NameNotFound in binding and naming
-         packages.  If possible, push default values closer to the point of
-         retrieval.  (The idea is to minimize the possibility that an unrelated
-         NameNotFound error gets hidden by a routine catching NameNotFound
-         in order to return a default value.)
-
        - Ensure default __repr__'s for all bindings are acceptable
 
        - Update tutorial for current kwargs
@@ -29,15 +22,6 @@ Open Issues/To-Do Items
        - Investigate whether suggestParentComponent() should be suppressed when
          the value is computed by the binding, or if perhaps 'suggestParent'
          should be set to 'False' by default for some kinds of bindings.
-
-
-
-
-
-
-
-
-
 
     * peak.web (some of this may get bumped to alpha 4)
 
@@ -54,31 +38,6 @@ Open Issues/To-Do Items
          a later release)
 
        - try/catch DOMlet (and related error rendering interface/framework)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
  Targeted for 0.5 Alpha 4
 
